--- a/spam-sms-detection.ipynb
+++ b/spam-sms-detection.ipynb
@@ -5,7 +5,7 @@
    "id": "f65b39cd",
    "metadata": {},
    "source": [
-    "# SPAM SMS Prediction\n",
+    "# SPAM SMS detection\n",
     "## Steps\n",
     "\n",
     "* Importing libraries\n",
